--- a/indupdate.html
+++ b/indupdate.html
@@ -5,7 +5,7 @@
         Indax Page
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="pra.css">
+    <link rel="stylesheet" href="prac.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </div>
         <div class="title">
             <h3>Shikshan Prasarak Mandal</h3>
-            <h1>STARWOOD  COLLEGE OF ENGINEERING</h1>
+            <h1>STARWOOD  COLLEGE OF ENGINEERING,MUMBAI</h1>
             <h4>(Establish in 1994)</h4>
         </div>
     </div>
@@ -44,6 +44,21 @@
         <a href="#news">  <i class="fa fa-industry" aria-hidden="true"></i>&nbsp;PLACEMENT CELL</a>
         <a href="#news">  <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;CONTACT US</a>
   </div>  
+  
+    <marquee direction="left"  scrollamount="10"> 
+        <a href="#" >NOTIFICATION FOR UNIVERSITY EXAM</a>
+        <a href="#">NOTIFICATION FOR INTERCOLLEGE SPORT COMPITATION</a>
+    </marquee>
+  <div id="slider">
+    <figure>
+        <img src="collegeback1.jpg">
+        <img src="Sophia-College-2.webp">
+        <img src="collegeback3.jpeg">
+        <img src="college6.jfif">
+        
+    </figure>
+
+  </div>
     <script> const text = document.querySelector('.text p')
         text.innerHTML = text.innerText.split("").map(
             (char, i) =>
